# social-media-analysis

./: README.md  pyproject.toml
src/: app.py
src/settings/: __init__.py  constants.py  secrets.py
src/utils/: graph.py  logger.py
