[project]
name = "social-media-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.3.2",
    "langchain>=0.3.11",
    "neo4j>=5.27.0",
    "openai>=1.57.4",
    "pendulum>=3.0.0",
    "pydantic==2.10.1",
    "python-louvain>=0.16",
    "pyvis>=0.3.2",
]
